package.json updated

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budjet-now-backend",
+  "name": "tracktus-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
